# mlb_data_pipeline

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 32ce9cd262c9_initial_schema_games_pitches_at_bats_.py  62b88e2adf54_widen_team_column_lengths.py  6a019cacbc01_add_venues_and_game_weather_venue_id_.py  6b09ea1fd844_add_mlb_weather_condition_fields.py
dags/: daily_aggregations.py  daily_backfill.py  data_export.py  data_quality.py
docs/: PLAN.md  ROADMAP.md  TESTING.md
frontend/: index.html
scripts/: verify_coverage.py
src/mlb_pipeline/: __init__.py  cli.py  config.py
src/mlb_pipeline/dashboard/: __init__.py  app.py  routes.py  state.py
src/mlb_pipeline/ingestion/: __init__.py  client.py  game_metadata.py  historical.py  parser.py  poller.py  venues.py  weather.py
src/mlb_pipeline/ml/: __init__.py  dataset.py  inference.py  models.py  trainer.py
src/mlb_pipeline/models/: __init__.py  database.py  enums.py  events.py
src/mlb_pipeline/processing/: __init__.py  aggregations.py  feature_engineer.py  transforms.py  weather_features.py
src/mlb_pipeline/storage/: __init__.py  (+6 more)
tests/: conftest.py
tests/fixtures/: live_feed_sample.json  schedule_sample.json
tests/test_ingestion/: test_client.py  test_feed_parser.py  test_models.py  test_poller.py  test_poller_advanced.py
tests/test_processing/: test_aggregations.py  test_transforms.py
tests/test_storage/: test_duckdb.py  test_parquet.py  test_sqlserver.py  test_writes.py
tests/test_stream/: test_publisher.py  test_redis.py
(+5 files in other folders)
