[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlb-pipeline"
version = "0.1.0"
description = "Real-time MLB baseball data pipeline with win probability predictions"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "pyodbc>=5.1",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "numpy>=1.26",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "MLB-StatsAPI>=1.7",
    "pybaseball>=2.2",
    "click>=8.1",
    "structlog>=24.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "torchmetrics>=1.3",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]
orchestration = ["prefect>=3.0"]
quality = ["great-expectations>=0.18"]
dashboard = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "fakeredis>=2.21",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
mlb = "mlb_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
